@@ -16,7 +16,7 @@ conflicts:
   DBD::RAM: 0.072
   SQL::Statement: 1.33
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.6501, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -40,4 +40,4 @@ resources:
   license: http://dev.perl.org/licenses/
   repository: https://svn.perl.org/modules/dbi/trunk/
   x_MailingList: mailto:dbi-dev@perl.org
-version: 1.623
+version: 1.624
