@@ -2,13 +2,19 @@
 
 DBI::Changes - List of significant changes to the DBI
 
-(As of $Date: 2012-12-21 18:15:43 +0000 (Fri, 21 Dec 2012) $ $Revision: 15545 $)
+(As of $Date: 2013-03-22 20:37:34 +0000 (Fri, 22 Mar 2013) $ $Revision: 15587 $)
 
 =encoding ISO8859-1
 
 =cut
 
-=head2 Changes in DBI 1.623 (svn r15547) 2nd Jan 2012
+=head2 Changes in DBI 1.624 (svn r15576) 22nd March 2013
+
+  Fixed Gofer for hash randomization in perl 5.17.10+ RT#84146
+
+  Clarify docs for can() re RT#83207
+
+=head2 Changes in DBI 1.623 (svn r15547) 2nd Jan 2013
 
   Fixed RT#64330 - ping wipes out errstr (Martin J. Evans).
   Fixed RT#75868 - DBD::Proxy shouldn't call connected() on the server.
@@ -26,7 +32,7 @@ DBI::Changes - List of significant changes to the DBI
 
   Refactored table meta information management from DBD::File into
     DBI::DBD::SqlEngine (H.Merijn Brand, Jens Rehsack)
-  Pevent undefined f_dir being used in opendir (H.Merijn Brand)
+  Prevent undefined f_dir being used in opendir (H.Merijn Brand)
 
   Added logic to force destruction of children before parents
     during global destruction. See RT#75614.
